# pocketportal

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  FIXES_APPLIED.md  HUMAN_IN_LOOP_SUMMARY.md  INCOMPLETE_FEATURES_AUDIT.md  KNOWN_ISSUES.md  LICENSE  MANIFEST.md  README.md  ROADMAP.md  STRATEGIC_REFACTOR_PLAN.md  STRUCTURE.md  __init__.py  config_validator.py  pyproject.toml  requirements_core.txt  requirements_with_addons.txt  telegram_agent_v3.py  test_phase4_standalone.py  verify_system.py
archive/: README.md
archive/v3_docs/: DEPLOYMENT_GUIDE_MASTER.md  DEPLOYMENT_GUIDE_MASTER_V3.1.md  PART_1_ROUTING_SYSTEM.md  PART_2B_UTILITY_2.md  PART_2C_DATA_AND_WEB.md  PART_4_INTEGRATION.md  PART_7_ADDON_TOOLS.md  TOOL_ADDONS_MASTER_PLAN.md
archive/v3_monolithic/: telegram_agent_v3.py
deployment/: README.md
docs/: CHANGELOG.md  CRITICAL_FIXES.md  FIXES_AND_ACTION_PLAN.md  HUMAN_IN_LOOP.md  IMPLEMENTATION_GUIDE_FIXED.md  PART_2A_BASE_AND_TOOLS.md  PART_3A_ADVANCED_1.md  PART_3B_ADVANCED_2.md  PART_5_TESTING_AND_DEPLOYMENT.md  PART_6_MCP_INTEGRATION.md  README.md  TESTING.md  architecture.md  setup.md
docs/archive/: MIGRATION_TO_4.0.md
docs/reports/: README.md
docs/security/: SECURITY_FIXES.md
document_processing_suite/: COMPLETE_PACKAGE_SUMMARY.md  requirements_document_suite.txt
document_processing_suite/docs/: README_DOCUMENT_SUITE.md
document_processing_suite/tools/: document_metadata_extractor.py
pocketportal/: __init__.py  cli.py
pocketportal/config/: __init__.py  settings.py  validator.py
pocketportal/config/schemas/: README.md
pocketportal/core/: __init__.py  engine.py  event_broker.py  event_bus.py  exceptions.py  security_middleware.py  types.py
pocketportal/interfaces/: __init__.py  telegram_interface.py  web_interface.py
pocketportal/interfaces/telegram/: __init__.py
pocketportal/interfaces/web/: __init__.py
pocketportal/middleware/: tool_confirmation_middleware.py
pocketportal/observability/: __init__.py  health.py  metrics.py
pocketportal/persistence/: repositories.py
pocketportal/protocols/: __init__.py
pocketportal/routing/: execution_engine.py
pocketportal/security/: __init__.py  middleware.py
pocketportal/tools/: __init__.py
pocketportal_enhancements/: requirements_enhancements.txt
pocketportal_enhancements/docs/: MIGRATION_GUIDE.md
pocketportal_phase2/: requirements_phase2.txt
pocketportal_phase2/core/: persistent_memory.py
pocketportal_phase2/interfaces/: rest_api.py  slack_interface.py
pocketportal_unified/: MIGRATION_GUIDE.md  QUICKSTART.md  README.md  README_4.0.md  requirements.txt  verify_unified.py
pocketportal_unified/core/: __init__.py  agent_engine.py  agent_engine_v2.py  security_middleware.py
pocketportal_unified/interfaces/: __init__.py  telegram_interface.py  web_interface.py
pocketportal_unified/prompts/: base_system.md  telegram_interface.md  web_interface.md
pocketportal_unified/web_static/: index.html
routing/: __init__.py  execution_engine.py  intelligent_router.py
scripts/: generate_addon_tools.py  install.sh  setup.sh
scripts/launch_agents/: com_telegram_agent.plist
scripts/verification/: test_phase2_standalone.py
security/: security_module.py
src/pocketportal/: __init__.py  __main__.py  cli.py  lifecycle.py
src/pocketportal/config/: __init__.py  (+2 more)
telegram_agent_tools/: __init__.py
telegram_agent_tools/data_tools/: math_visualizer.py
telegram_agent_tools/dev_tools/: python_env_manager.py
telegram_agent_tools/docker_tools/: docker_compose.py  docker_logs.py  docker_run.py  docker_stop.py
telegram_agent_tools/git_tools/: git_branch.py  git_commit.py  git_diff.py  git_log.py  git_merge.py  git_pull.py  git_push.py  git_status.py
telegram_agent_tools/knowledge_tools/: local_knowledge.py
telegram_agent_tools/mcp_tools/: __init__.py  mcp_connector.py
telegram_agent_tools/system_tools/: process_monitor.py
telegram_agent_tools/utility_addons/: clipboard_manager.py
telegram_agent_tools/utility_tools/: file_compressor.py
tests/: README.md  __init__.py  conftest.py  test_base_tool.py  test_data_integrity.py  test_job_queue.py  test_router.py
tests/e2e/: test_cli_commands.py  test_job_queue_system.py  test_observability.py  test_phase3_standalone.py
tests/integration/: test_tool_loading.py
tests/unit/: test_base_tool.py  test_human_in_loop_middleware.py  test_job_queue.py  test_router.py  test_security.py
(+95 files in other folders)
